--- a/lib/mapea/files/templates/geosearchbylocationresults.html
+++ b/lib/mapea/files/templates/geosearchbylocationresults.html
@@ -11,7 +11,7 @@
             <tbody>
                <tr>
                   <td class="key">{{key}}</td>
-                  <td class="value">{{value}}</td>
+                  <td class="value">{{{value}}}</td>
                </tr>
             </tbody>
          </table>
