--- a/lib/mapea/files/templates/geosearchresults.html
+++ b/lib/mapea/files/templates/geosearchresults.html
@@ -13,7 +13,7 @@
             <tbody>
                <tr>
                   <td class="key">{{key}}</td>
-                  <td class="value">{{value}}</td>
+                  <td class="value{{#oneword value}} m-wordbreak{{/oneword}}">{{{value}}}</td>
                </tr>
             </tbody>
          </table>
@@ -23,11 +23,11 @@
    </div>
    {{#eq docs.length 0}}
    <div class="results">
-   <div class="partial">No se han encontrado resultados para la búsqueda "{{query}}".</div>
+      <div class="partial">No se han encontrado resultados para la búsqueda "{{query}}".</div>
    </div>
    {{/eq}}
    <div class="page">
       <span class="found" id="m-geosearch-page-found">{{docs.length}}</span> de <span class="total">{{total}}</span>
       <div class="g-cartografia-flecha-arriba"></div>
    </div>
-</div> 
+</div>
