--- a/lib/mapea/files/templates/searchstreet.html
+++ b/lib/mapea/files/templates/searchstreet.html
@@ -3,8 +3,8 @@
    <!-- search panel -->
    <div class="search-panel">
       <input type="text" id="m-searchstreet-search-input" placeholder="Buscar" class="m-input-search" />
-      <button id="m-searchstreet-search-btn" class="g-cartografia-zoom m-search-btn"></button>
-      <button id="m-searchstreet-clear-btn" class="g-cartografia-cancelar m-clear-btn"></button>
+      <button id="m-searchstreet-search-btn" class="g-cartografia-zoom m-search-btn" title="Buscar"></button>
+      <button id="m-searchstreet-clear-btn" class="g-cartografia-cancelar m-clear-btn"title="Limpiar búsqueda"></button>
    </div>
    <!-- results autocomplete -->
    <div class="results-panel-content" id="m-autocomplete-results">
