--- a/lib/mapea/files/templates/searchstreetgeosearch.html
+++ b/lib/mapea/files/templates/searchstreetgeosearch.html
@@ -3,9 +3,9 @@
    <!-- search panel -->
    <div class="search-panel">
       <input type="text" id="m-searchstreetgeosearch-search-input" placeholder="Buscar" class="m-input-search" />
-      <button id="m-searchstreetgeosearch-search-btn" class="g-cartografia-zoom m-search-btn"></button>
-      <button id="m-searchstreetgeosearch-help-btn" class="g-cartografia-ayuda m-help-btn"></button>
-      <button id="m-searchstreetgeosearch-clear-btn" class="g-cartografia-cancelar m-clear-btn"></button>
+      <button id="m-searchstreetgeosearch-search-btn" class="g-cartografia-zoom m-search-btn" title="Buscar"></button>
+      <button id="m-searchstreetgeosearch-help-btn" class="g-cartografia-ayuda m-help-btn" title="Ayuda"></button>
+      <button id="m-searchstreetgeosearch-clear-btn" class="g-cartografia-cancelar m-clear-btn" title="Limpiar búsqueda"></button>
    </div>
 
    <!-- results autocomplete searchstreet-->
