--- a/lib/mapea/files/templates/wmcselector.html
+++ b/lib/mapea/files/templates/wmcselector.html
@@ -1,5 +1,5 @@
-<div class="m-control m-wmcselector-container g-cartografia-mapa">
-   <select class="m-wmcselector-select" data-role="none">
+<div class="m-control m-wmcselector-container g-cartografia-mapa" title="Selector de contextos">
+   <select class="m-wmcselector-select">
       {{#each layers}}
       <option value="{{url}}">{{name}}</option>
       {{/each}}
