--- a/lib/mapea/files/templates/geojson_popup.html
+++ b/lib/mapea/files/templates/geojson_popup.html
@@ -5,7 +5,7 @@
       <table>
          <tr>
             <td class="key">{{key}}</td>
-            <td class="value">{{value}}</td>
+            <td class="value">{{{value}}}</td>
          </tr>
       </table>
       {{/each}}
