--- a/lib/mapea/files/templates/deletefeature.html
+++ b/lib/mapea/files/templates/deletefeature.html
@@ -1,3 +1,3 @@
 <div class="m-control m-deletefeature-container">
-   <button id="m-button-deletefeature" class="g-cartografia-papelera"></button>
+   <button id="m-button-deletefeature" class="g-cartografia-papelera" title="Eliminar"></button>
 </div>
