--- a/lib/mapea/files/templates/getfeatureinfo.html
+++ b/lib/mapea/files/templates/getfeatureinfo.html
@@ -1,3 +1,3 @@
 <div class="m-control m-getfeatureinfo-container" id="infoGetFeature">
-   <button id="m-getfeatureinfo-button" class="g-cartografia-info"></button>
+   <button id="m-getfeatureinfo-button" class="g-cartografia-info" title="Consultar capa"></button>
 </div>
