--- a/lib/mapea/files/templates/measureclear.html
+++ b/lib/mapea/files/templates/measureclear.html
@@ -1,3 +1,3 @@
 <div class="m-control m-measureclear-container">
-   <button id="m-measure-button" class="g-cartografia-papelera"></button>
+   <button id="m-measure-button" class="g-cartografia-papelera" title="Borrar medidas"></button>
 </div>
