--- a/lib/mapea/files/templates/savefeature.html
+++ b/lib/mapea/files/templates/savefeature.html
@@ -1,3 +1,3 @@
 <div class="m-control m-savefeature-container">
-   <button id="m-button-savefeature" class="g-cartografia-guardar"></button>
+   <button id="m-button-savefeature" class="g-cartografia-guardar" title="Guadar"></button>
 </div>
